tests/snapshots/findings_overlay__orphans_markdown_show_findings.snap
---
source: tests/findings_overlay.rs
expression: out
---
### Orphans

1 unused declaration found: 0 workflows, 1 local action, 0 inputs, 0 outputs.

| Kind | Target | Detail |
|---|---|---|
| local-action-composite | `.github/actions/orphan-tool` | unused |

#### Findings on orphans (prefer deletion)

  .github/actions/orphan-tool
    - [zizmor/high] template-injection (L10)
    - [zizmor/high] unpinned-uses (L7)
