tests/snapshots/findings_overlay__orphans_text_show_priority.snap
---
source: tests/findings_overlay.rs
expression: out
---
orphans  1 unused declaration  (1 actions)

ACTIONS
kind       target
composite  .github/actions/orphan-tool

FINDINGS ON ORPHANS (PREFER DELETION)
  .github/actions/orphan-tool
    - [zizmor/high] template-injection (L10) — graph: low [orphaned]
    - [zizmor/high] unpinned-uses (L7) — graph: low [orphaned]
