tests/snapshots/findings_overlay__trace_markdown_show_findings.snap
---
source: tests/findings_overlay.rs
expression: out
---
### Trace

1 entry workflow found for `pull_request_target`.

| Dep | Kind | Edge | Target | Note |
|---:|---|---|---|---|
| 0 | wf | entry | .github/workflows/pr-target.yml | entry, types: opened, synchronize \[H:4 M:1\] |
| 1 | ext-ac | uses | actions/checkout@v4 | - |
| 1 | ext-ac | uses | deploy-org/deploy-action@v2 | - |
